--- a/styles.css
+++ b/styles.css
@@ -186,11 +186,11 @@ nav ul {
       right: -10%;
       z-index: -1;
       opacity: 0.5;
-      animation: cloudAnimation2 40s infinite ease-in-out;
+      animation: cloudAnimation2 40s infinite ease-out;
 }
 
 .moving-cloud-2 {
-      animation: cloudAnimation1 40s infinite ease-in-out;
+      animation: cloudAnimation1 40s infinite ease-out;
 
 }
 
@@ -346,7 +346,12 @@ nav ul {
 .form-wrapper input {
       padding: 1rem 1.3rem;
       outline: none;
-      background-color: rgba(255, 255, 255, 0.85)
+      background-color: rgba(255, 255, 255, 0.85);
+      transition: .5s;
+}
+
+.form-wrapper input:focus {
+      background-color: rgba(82, 186, 179, .5);
 }
 
 .form-head h2 {
