--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,13 @@ a {
 .main-head {
       background-color: #343c44;
       color: white;
+      position: sticky;
+      /* ??? */
+      width: 99.1vw;
+      z-index: 10;
+      top: 0;
 }
+
 
 nav {
       min-height: 10vh;
@@ -71,8 +77,9 @@ nav {
       margin: auto;
       align-items: center;
       padding: 2rem;
-      position: sticky;
+
       flex-wrap: wrap;
+
 }
 
 nav ul {
@@ -140,6 +147,12 @@ nav ul {
 
 }
 
+.book-btn:focus {
+      rgba(82, 186, 179, .8)
+}
+
+
+
 a:hover {
       color: rgb(82, 186, 179);
       transition: .3s;
@@ -151,7 +164,7 @@ a:hover {
 #locations {
       min-height: 100vh;
       background-image: linear-gradient(rgba(0, 0, 0, .5), transparent), url('./img/new-york-page.png');
-      background-size: cover;
+      background-size: contain;
       position: center;
       display: flex;
       align-items: center;
@@ -415,7 +428,7 @@ footer {
 
 
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
 
       nav {
             text-align: center;
@@ -433,6 +446,9 @@ footer {
             margin: 0 10rem;
       }
 
+      #locations {
+            background-size: cover;
+      }
 }
 
 @media screen and (max-width: 660px) {
@@ -509,6 +525,15 @@ footer {
 
       .cards {
             margin: 0 auto;
+      }
+
+      .footer-wrapper {
+            width: 100%;
+
+      }
+
+      .form-wrapper {
+            border-radius: 0rem 0rem 2rem 2rem
       }
 
 
