--- a/style/_modal.scss
+++ b/style/_modal.scss
@@ -5,7 +5,7 @@
       position: fixed;
       width: 100%;
       height: 100vh;
-      top: 100%;
+      top: -100%;
       left: 0;
       display: flex;
       align-items: center;
@@ -13,7 +13,9 @@
       visibility: hidden;
       opacity: 0;
       transition: visibility 2s, opacity 1s;
-      animation: appear 1.2s ease-in;
+      animation: appear 2s ease-in,
+            slide-in .5s ease-in;
+
       animation-fill-mode: forwards;
 
 }
@@ -111,20 +113,20 @@
 
 @keyframes appear {
       from {
-            transform: scale(0) translateY(0%);
+            transform: scale(0);
       }
 
       to {
-            transform: scale(1) translateY(-100%);
+            transform: scale(1);
       }
 }
 
-// @keyframes slide-in {
-//       from {
-//             transform: translateY(150%);
-//       }
+@keyframes slide-in {
+      from {
+            transform: translateY(0%);
+      }
 
-//       to {
-//             transform: translateY(0%);
-//       }
-// }
+      to {
+            transform: translateY(100%);
+      }
+}
