--- a/style/styles.css
+++ b/style/styles.css
@@ -573,7 +573,7 @@ footer {
   position: fixed;
   width: 100%;
   height: 100vh;
-  top: 100%;
+  top: -100%;
   left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -588,8 +588,8 @@ footer {
   opacity: 0;
   -webkit-transition: visibility 2s, opacity 1s;
   transition: visibility 2s, opacity 1s;
-  -webkit-animation: appear 1.2s ease-in;
-          animation: appear 1.2s ease-in;
+  -webkit-animation: appear 2s ease-in, slide-in .5s ease-in;
+          animation: appear 2s ease-in, slide-in .5s ease-in;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
@@ -680,23 +680,45 @@ footer {
 
 @-webkit-keyframes appear {
   from {
-    -webkit-transform: scale(0) translateY(0%);
-            transform: scale(0) translateY(0%);
+    -webkit-transform: scale(0);
+            transform: scale(0);
   }
   to {
-    -webkit-transform: scale(1) translateY(-100%);
-            transform: scale(1) translateY(-100%);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
 @keyframes appear {
   from {
-    -webkit-transform: scale(0) translateY(0%);
-            transform: scale(0) translateY(0%);
+    -webkit-transform: scale(0);
+            transform: scale(0);
   }
   to {
-    -webkit-transform: scale(1) translateY(-100%);
-            transform: scale(1) translateY(-100%);
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@-webkit-keyframes slide-in {
+  from {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  to {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  to {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
   }
 }
 /*# sourceMappingURL=styles.css.map */
