--- a/style/_navigation.scss
+++ b/style/_navigation.scss
@@ -43,11 +43,16 @@ nav {
       transition: .5s;
 }
 
+.hero-blur {
 
+      filter: blur(10px);
+      transition: 1s;
+}
 
 .hero {
       min-height: 90vh;
       background-image: linear-gradient(rgba(0, 0, 0, .5), transparent), url(../img/landing-page.jpg);
+
       background-size: cover;
       background-position: center;
       color: white;
