--- a/style/styles.css
+++ b/style/styles.css
@@ -106,6 +106,13 @@ nav ul {
   transition: .5s;
 }
 
+.hero-blur {
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
 .hero {
   min-height: 90vh;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(transparent)), url(../img/landing-page.jpg);
@@ -569,23 +576,26 @@ footer {
 }
 
 /* C o n t a c t   S e c t i o n */
+.background {
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 .modal-bg {
   position: fixed;
   width: 100%;
   height: 100vh;
   top: -100%;
   left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  visibility: hidden;
-  opacity: 0;
   -webkit-transition: visibility 2s, opacity 1s;
   transition: visibility 2s, opacity 1s;
   -webkit-animation: appear 2s ease-in, slide-in .5s ease-in;
@@ -595,8 +605,9 @@ footer {
 }
 
 .modal-active {
-  visibility: visible;
-  opacity: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .modal {
