--- a/style/styles.css
+++ b/style/styles.css
@@ -106,13 +106,6 @@ nav ul {
   transition: .5s;
 }
 
-.hero-blur {
-  -webkit-filter: blur(10px);
-          filter: blur(10px);
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
 .hero {
   min-height: 90vh;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(transparent)), url(../img/landing-page.jpg);
@@ -483,6 +476,19 @@ a:hover {
   }
   .footer-wrapper img {
     max-width: 2rem;
+  }
+  .modal {
+    position: relative;
+  }
+  .modal .form-head {
+    height: 2vh;
+    margin-bottom: 4rem;
+    margin-top: 4rem;
+  }
+  .modal .modal-close {
+    position: absolute;
+    top: 100px;
+    right: 30px;
   }
 }
 
