--- a/style/styles.css
+++ b/style/styles.css
@@ -478,7 +478,8 @@ a:hover {
     max-width: 2rem;
   }
   .modal {
-    position: relative;
+    position: -webkit-sticky;
+    position: sticky;
   }
   .modal .form-head {
     height: 2vh;
@@ -489,6 +490,10 @@ a:hover {
     position: absolute;
     top: 100px;
     right: 30px;
+  }
+  .modal form button {
+    display: block;
+    margin-top: 0;
   }
 }
 
@@ -617,11 +622,32 @@ footer {
 }
 
 .modal {
-  background: rgba(0, 0, 0, 0.7);
+  margin-top: 13rem;
+  background: rgba(0, 0, 0, 0.9);
   width: 800px;
   color: white;
   border-radius: 2rem;
   position: relative;
+}
+
+.modal .modal-close-btn {
+  width: 100%;
+  border: none;
+  border-radius: 0px;
+  padding: 1rem 4rem;
+  background-color: rgba(238, 95, 95, 0.5);
+  color: white;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  outline: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  border-radius: 2rem 2rem 0rem 0rem;
+  margin-top: 0;
+}
+
+.modal .modal-close-btn:hover {
+  background-color: #ee5f5f;
 }
 
 .modal label {
@@ -631,7 +657,7 @@ footer {
 .modal button {
   width: 100%;
   border-radius: 0rem 0rem 2rem 2rem;
-  margin-top: 8rem;
+  margin-top: 2rem;
 }
 
 .modal input {
